--- a/templates/web/secciones/panelcontrol.html
+++ b/templates/web/secciones/panelcontrol.html
@@ -18,7 +18,7 @@
         </li>
 
         <li id="notification-full-image">
-            <a href="#">
+            <a href="/panelcontrol/logs">
                 <i class="icon-list-alt"></i>Logs
             </a>
         </li>
