Configura Logs para trazar mejor

--- a/templates/web/secciones/panelcontrol/logs.html
+++ b/templates/web/secciones/panelcontrol/logs.html
@@ -5,13 +5,13 @@
     <div class="input">
         <textarea placeholder="logs" rows="20">
             {% autoescape off %}
-                {{ textologs }}
+                {{textologs}}
             {%  endautoescape %}
 
         </textarea>
     </div>
     <div class="form-actions">
-            <button type="submit" name="leer_logs" class="button blue">Traer Logs</button>
+            <button type="submit" name="leer_logs" class="button blue">Actualizar</button>
             <div class="pull-right"> </div>
     </div>
     </form>
