--- a/templates/web/secciones/lecturas/ultima24horas.html
+++ b/templates/web/secciones/lecturas/ultima24horas.html
@@ -17,6 +17,7 @@
             $('#tabla24').dataTable({
             "aaData":{{ listadatos }}
                 ,
+            "aaSorting": [[ 0, "desc" ]],
             "aoColumns":[{"sTitle":"Horas"} , {"sTitle": "Energia en Watts"}  ]
             });
             {%  endautoescape %}
