--- a/templates/web/secciones/historico/diario.html
+++ b/templates/web/secciones/historico/diario.html
@@ -1,13 +1,22 @@
 {% extends "web/secciones/historico.html" %}
 {% block head %}
+    <script type="text/javascript" src="{{ STATIC_URL }}javascripts/jquery172.js"></script>
 
 
 {% endblock %}
 {% block scripthead %}
     $(document).ready(function()
     {
-        $('#id_fecha').clikc(function(e){
+    var pickerOpts = {
+    changeMonth: true,
+    changeYear: true,
+    yearRange: "-2:+1",
+    showOn: "button",
+    buttonText: "Calendario",
+    dateFormat:"d-m-yy"
+    };
 
+    $("#id_fecha").datepicker(pickerOpts);
 
     });
 
@@ -50,7 +59,7 @@
         <div class=span12>
             <div class="box" style="position:relative;">
                 <div class="tab-header" role="grid">
-                    Resumen Dia cada 5 minutos
+                    Lista de Datos
                 </div>
                 <table id="tabla24" class="table table-striped table-bordered box">
                 </table>
