Ultima actualizacion varias correciones

--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -17,6 +17,7 @@
 
 </head>
 <script type='text/javascript'>
+
     {% block scripthead %}
 
 
@@ -94,7 +95,7 @@
                 </li>
 
                 <li class="">
-                    <a href="../historico/diario">
+                    <a href="../historico/historicos/1">
                         <i class="icon-bar-chart"></i> Historicos
                     </a>
                 </li>
