--- a/templates/web/secciones/historico.html
+++ b/templates/web/secciones/historico.html
@@ -6,19 +6,24 @@
 {% block sencondarymenu %}
     <ul class="secondary-nav-menu">
         <li class="active">
-            <a href="/historico/diario" id="modal-link">
+            <a href="/historico/historicos/1" id="modal-link">
                 <i class="icon-calendar"></i> Diario
+            </a>
+        </li>
+        <li>
+            <a href="/historico/historicos/2" id="modal-link">
+                <i class="icon-calendar"></i> Semanal
             </a>
         </li>
 
         <li>
-            <a href="/historico/mensual" id="modal-link">
+            <a href="/historico/historicos/3" id="modal-link">
                 <i class="icon-calendar"></i> Mensual
             </a>
         </li>
 
         <li id="notification-full-image">
-            <a href="/historico/anual">
+            <a href="/historico/historicos/4">
                 <i class="icon-calendar"></i>Anual
             </a>
         </li>
