--- a/templates/web/secciones/lecturas/ultimomes.html
+++ b/templates/web/secciones/lecturas/ultimomes.html
@@ -22,7 +22,7 @@
         });
 
         var avalores =  ({{ listgraf }});
-        ponGrafico(avalores);
+        ponGrafico(avalores,"#chart1");
 
     {%  endautoescape %}
 
