Procedimiento de volcado de datos email

--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -218,7 +218,7 @@
                      <div class="span12">
                          <div class="footer">
                              <div>2012 © InfinityLoop Sistemas S.L</div>
-                             <div>Creado por <a href="http://wwww.infinityloop.es">InfinityLoop</a></div>
+                             <div>Creado por <a href="http://www.infinityloop.es">InfinityLoop</a></div>
                          </div>
                      </div>
                 </div>
